安全优化：按链路匹配的CORS与异常JSON返回，完善401/403处理